--- a/src/Resources/translations/NovosgaUsersBundle.es_AR.xlf
+++ b/src/Resources/translations/NovosgaUsersBundle.es_AR.xlf
@@ -1,5 +1,5 @@
 <?xml version="1.0" ?><xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-  <file datatype="plaintext" original="messages.pt_BR.xlf" source-language="pt-BR" target-language="es">
+  <file datatype="plaintext" original="messages.pt_BR.xlf" source-language="pt-BR" target-language="es-AR">
     <body>
       <trans-unit id="0">
         <source>module.name</source>
@@ -13,7 +13,7 @@
       </trans-unit>
       <trans-unit id="2">
         <source>subtitle</source>
-        <target>Administrar usuarios de la unidad actual</target>
+        <target>Administre los usuarios de la unidad actual</target>
         
       </trans-unit>
       <trans-unit id="3">
@@ -27,8 +27,8 @@
         
       </trans-unit>
       <trans-unit id="5">
-        <source>form.user.username</source>
-        <target>Nombre de usuario</target>
+        <source>form.user.userIdentifier</source>
+        <target>Usuario</target>
         
       </trans-unit>
       <trans-unit id="6">
@@ -43,7 +43,7 @@
       </trans-unit>
       <trans-unit id="8">
         <source>form.user.email</source>
-        <target>Correo Electronico</target>
+        <target>E-mail</target>
         
       </trans-unit>
       <trans-unit id="9">
@@ -58,17 +58,17 @@
       </trans-unit>
       <trans-unit id="10">
         <source>form.user.password</source>
-        <target>Contraseña</target>
+        <target>Turno</target>
         
       </trans-unit>
       <trans-unit id="11">
         <source>form.user.password_confirm</source>
-        <target>Confirmación de la contraseña</target>
+        <target>Confirmación de contraseña</target>
         
       </trans-unit>
       <trans-unit id="12">
         <source>error.password_confirm</source>
-        <target>La contraseña y la confirmación de la contraseña no coiciden.</target>
+        <target>La contraseña y la confirmación de la misma no coinciden.</target>
         
       </trans-unit>
       <trans-unit id="13">
@@ -88,7 +88,7 @@
       </trans-unit>
       <trans-unit id="16">
         <source>section.lotation.subtitle</source>
-        <target>La asignación se utiliza para definir el perfil de acceso del usuario en las unidades.</target>
+        <target>La dotación es utilizada para definir el perfil de acceso del usuario a las unidades.</target>
         
       </trans-unit>
       <trans-unit id="17">
@@ -118,7 +118,7 @@
       </trans-unit>
       <trans-unit id="22">
         <source>button.close</source>
-        <target>Fechar</target>
+        <target>Cerrar</target>
         
       </trans-unit>
       <trans-unit id="23">
@@ -128,7 +128,7 @@
       </trans-unit>
       <trans-unit id="24">
         <source>button.new_user</source>
-        <target>Nuevo usuario</target>
+        <target>Nuevo Usuario</target>
         
       </trans-unit>
       <trans-unit id="25">
@@ -163,7 +163,7 @@
       </trans-unit>
       <trans-unit id="31">
         <source>label.permissions</source>
-        <target>Perisos</target>
+        <target>Permisos</target>
         
       </trans-unit>
       <trans-unit id="32">
@@ -188,7 +188,7 @@
       </trans-unit>
       <trans-unit id="36">
         <source>label.username</source>
-        <target>Nombre de usuario</target>
+        <target>Usuario</target>
         
       </trans-unit>
       <trans-unit id="37">
@@ -198,18 +198,22 @@
       </trans-unit>
       <trans-unit id="40">
         <source>label.add_success</source>
+        <target>Usuario agregado con éxito</target>
         
       </trans-unit>
       <trans-unit id="41">
         <source>error.no_lotation</source>
+        <target>Necesita pertenecer a por lo menos un Servicio</target>
         
       </trans-unit>
       <trans-unit id="42">
         <source>error.add_lotation_permission_denied</source>
+        <target>Usted no tiene permiso para agregar un cargo a la Unidad %uunidade%</target>
         
       </trans-unit>
       <trans-unit id="43">
         <source>error.remove_lotation_permission_denied</source>
+        <target>Usted no tiene permiso para eliminar un cargo a la Unidad %unidade%</target>
         
       </trans-unit>
       <trans-unit id="44">
@@ -219,6 +223,7 @@
       </trans-unit>
       <trans-unit id="45">
         <source>error.more_than_one_lotation</source>
+        <target>No puede tener más de un cargo por unidad</target>
         
       </trans-unit>
     </body>
